--- a/templates/active-test.html
+++ b/templates/active-test.html
@@ -1,9 +1,5 @@
 <!--
-This component describes a single test. Each test is 'active' because it
-governs itself.
-
-It creates a setInterval to run the test function as defined in the
-grader.js file.
+This component describes a single test. Each test is 'active' because it governs itself. It runs the active_test function registered to a test.
 
 The test bubbles an 'test-passed' event to the <test-suite> when it passes.
 -->
@@ -33,6 +29,9 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
     var importDoc = document.currentScript.ownerDocument;
     var proto = Object.create(HTMLElement.prototype);
 
+    /*
+    Called to create the element
+    */
     proto.createdCallback = function() {
       var template = importDoc.querySelector('#active-test');
       var clone = document.importNode(template.content, true);
@@ -40,52 +39,115 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
       root.appendChild(clone);
     };
 
+    /*
+    This massive function is called when an instance of the element is attached to the page. All of the active_test logic is contained within.
+    @param: none
+    returns: none
+    */
     proto.attachedCallback = function() {
+      /*
+      Grab this test's properties that were handed down by the test suite
+      */
       var testDefinition = this.testDefinition;
       var grader = testDefinition.active_test;
-      // var testParams = testDefinition.params;
       var testDescription = testDefinition.description;
-      var index = this.index; // index of test in the suites JSON
+      var index = this.index; // index of test in its suite array
 
 
-      // Optional flags defined below!
+      /*
+      Optional flags specific to the test
+      */
       var noRepeat = testDefinition.flags.noRepeat || false; // run only once on load
       var repeat = testDefinition.flags.repeat || false; // keep running even if test passes
       var async = testDefinition.flags.async || false;  // async
       var showCurrent = testDefinition.flags.showCurrent || false;  // TODO: show currently resolved value
       var optional = testDefinition.flags.optional || false; // test does not affect code display
 
-
+      /*
+      Display the test description
+      */
       var td = this.shadowRoot.querySelector('.test-desc');
       td.innerHTML = testDescription;
 
-      if (showCurrent) td.insertAdjacentHTML('beforeend', '<br>&nbsp;&nbsp;&nbsp;&nbsp;Currently: pending');
+      // Ewww
+      // TODO: make this nicer?
+      if (showCurrent) {
+        td.insertAdjacentHTML('beforeend', '<br>&nbsp;&nbsp;&nbsp;&nbsp;Currently: pending');
+      }
 
+      /*
+      Just swap the classes
+      */
       function testHasPassed() {
         td.classList.remove('incorrect');
         td.classList.add('correct');
-        if (!repeat) clearInterval(gradeRunner);
       };
 
+      /*
+      Just swap the classes
+      */
       function testHasFailed() {
         td.classList.add('incorrect');
         td.classList.remove('correct');
       };
 
+      /*
+      @param: info{} (info has keys: index0, testCorrect/, desc'')
+      */
       function fireTestStatusEvent(info) {
         // info includes index, testCorrect, testDescription
         var testStatusEvent = new CustomEvent('test-status', {'detail': info});
         td.dispatchEvent(testStatusEvent);
       };
       
+      /*
+      @param: val'' (the current value)
+      */
       function renderCurrentValue(val) {
         // drops the pending placeholder from Currently: pending
         td.innerHTML = td.innerHTML.slice(0, td.innerHTML.length - 7);
         // adds the new value
         td.insertAdjacentHTML('beforeend', val);
       };
+
+      /*
+      Calls grader(), which was originally registered as active_test()
+      @param: none
+      */
+      function runSyncTest() {
+        var gradeRunner = setInterval(function() {
+          // run the test
+          try {
+            testCorrect = grader();
+          } catch (e) {
+            throw new Error("Test: " + grader + " failed to execute because:");
+            console.log(e);
+          }
+          // update the widget
+          if (testCorrect) {
+            testHasPassed();
+          } else if (repeat && !testCorrect) {
+            testHasFailed();
+          }
+          // let the test suite know what's going on
+          if (!optional) {
+            fireTestStatusEvent({'index': index, 'testCorrect': testCorrect, 'desc': testDescription});
+          }
+          // clear the interval (if applicable)
+          if (testCorrect || noRepeat) {
+            clearInterval(gradeRunner);
+          }
+        }, 1000)
+      }
       
-      function runAsyncTest(cb, params) {
+      // TODO: check that this still works
+      // TODO: use the RI blog to test
+      /*
+      Need to wait on the network? That's why runAsyncTest exists. Uses the Promise interface.
+      Calls grader(), which was originally registered as active_test()
+      @param: none
+      */
+      function runAsyncTest() {
         var responseDetails = {};
         var callback = {
           success: function(detail) {
@@ -100,50 +162,36 @@ The test bubbles an 'test-passed' event to the <test-suite> when it passes.
             if (showCurrent && responseDetails['bytes']) renderCurrentValue((responseDetails['bytes'] / 1000000).toString().slice(0,4) + "MB");
           }
         };
-
-        // TODO: refactor this so it's not just page-bytes
-        var promise = new Promise(
-            function(resolve, reject) {
-              cb(params);
-              document.querySelector('test-widget').addEventListener('async-end', function(e) {
-                responseDetails = e.detail;
-                if (responseDetails['passed']) {
-                  resolve(responseDetails);
-                } else if (!responseDetails['passed']) {
-                  reject(e.detail);
-                }
-              })
-            }).then(callback.success, callback.error).then(callback.update);
+        var promise = new Promise(function(resolve, reject) {
+          grader();
+          document.querySelector('test-widget').addEventListener('async-end', function(e) {
+            responseDetails = e.detail;
+            if (responseDetails['passed']) {
+              resolve(responseDetails);
+            } else if (!responseDetails['passed']) {
+              reject(e.detail);
+            }
+          })
+        }).then(callback.success, callback.error).then(callback.update);
       }
 
       /*
-      Logic in play here:
-        * optional tests don't fire status events.
-        * repeat tests stop when the suite passes.
-        * noRepeat tests only fire once as soon as the test loads.
-        * async tests resolve through promises.
+      Now we're down to the actual testing logic. Init testCorrect to start so that it has to be proven true.
       */
-
-      // TODO: clean up this logic
-      // TODO: move repeat logic in here
       var testCorrect = false;
-      if (!optional) fireTestStatusEvent({'index': index, 'testCorrect': testCorrect, 'desc': testDescription});
-      var gradeRunner = setInterval(function() {
-        if (async) {
-          runAsyncTest(grader[grader], testParams);
-        } else if (!async) {
-          try {
-            testCorrect = grader();
-          } catch (e) {
-            // TODO: make this more useful
-            throw new Error("Test: " + grader + " failed to execute.");
-          }
-          if (testCorrect) testHasPassed();
-          if (repeat && !testCorrect) testHasFailed();
-        }
-        if (!optional) fireTestStatusEvent({'index': index, 'testCorrect': testCorrect, 'desc': testDescription});
-        if (noRepeat || async) clearInterval(gradeRunner);
-      }, 1000)
+
+      /*
+      If tests are not optional, they report their status after every run to the test suite. This first event ensures that every test reports in before being run.
+      */
+      if (!optional) {
+        fireTestStatusEvent({'index': index, 'testCorrect': testCorrect, 'desc': testDescription});
+      }
+      
+      if (async) {
+        runAsyncTest();
+      } else {
+        runSyncTest();
+      }
 
       // TODO: not working?
       if (repeat) {
