fixes error handling with waitsForEvent tests

--- a/ext/src/templates/feedback.html
+++ b/ext/src/templates/feedback.html
@@ -62,6 +62,7 @@ This component holds a single test.
     */
     proto.attachedCallback = function() {
       self = this;
+      self.setAttribute('test-passed', false);
       updateView();
     };
 
@@ -76,7 +77,7 @@ This component holds a single test.
     function updateView() {
       try {
         var testDescription = self.getAttribute('description');
-        var testPassed = self.getAttribute('test-passed');        
+        var testPassed = self.getAttribute('test-passed');
       } catch (e) {
         console.log(e);
       }
@@ -98,6 +99,7 @@ This component holds a single test.
       };
 
       function testHasErred() {
+        markRightOrWrong.classList.remove('correct');
         markRightOrWrong.classList.remove('incorrect');
         markRightOrWrong.classList.add('error');
       };
@@ -106,7 +108,7 @@ This component holds a single test.
         testHasPassed();
       } else if (testPassed === 'false') {
         testHasFailed();
-      } else {
+      } else if (testPassed === 'error') {
         testHasErred();
       }
     };
