adds debug mode. better error handling

--- a/ext/src/templates/feedback.html
+++ b/ext/src/templates/feedback.html
@@ -5,20 +5,22 @@ This component holds a single test.
 
 <template id="active-test">
   <style scoped>
+    .test-desc {
+      width: 100%;
+    }
+
     .correct {
       color: #060;
     }
     .correct::before {
       content: "✓ ";
     }
+    
     .incorrect {
       color: #900;
     }
     .incorrect::before {
       content: "✗ ";
-    }
-    .test-desc {
-      width: 100%;
     }
     .error {
       color: #A48700;
@@ -351,15 +353,20 @@ when all suites pass.
     .test-widget-display {
       position: fixed;
       min-width: 325px;
-      background-color: rgba(230, 230, 230, 0.9);
-      opacity: 0.5;
-      right: 0px;
-      top: 0px;
-      padding: 0.5em;
-      text-align: left;
+      max-width: 500px;
       max-height: 100%;
       overflow-y: scroll;
+      
+      background-color: rgba(230, 230, 230, 0.9);
+      opacity: 0.5;
       transition: opacity 0.3s, max-height 0.3s;
+      
+      top: 0px;
+      right: 0px;
+      padding: 0.5em;
+
+      text-align: left;
+
       z-index: 99999 !important;
     }
 
