lints by adding a semicolon when it’s an expression

--- a/ext/app/templates/feedback.html
+++ b/ext/app/templates/feedback.html
@@ -433,7 +433,7 @@ when all suites pass.
 
     proto.attachedCallback = function() {
       var testWidgetDisplay = this.shadowRoot.querySelector('.test-widget-display');
-      var viewContainer = testWidgetDisplay.querySelector('.view-container')
+      var viewContainer = testWidgetDisplay.querySelector('.view-container');
 
       // initialize the view options
       var testResultsElem = document.createElement('test-results');
