--- a/ext/app/templates/feedback.html
+++ b/ext/app/templates/feedback.html
@@ -40,7 +40,7 @@
            content: "✗ ";
        }
        .error {
-           color: #A48700;
+           color: #a48700;
        }
        .error::before {
            content: "?? ";
@@ -280,7 +280,7 @@
        }
        .suite-code {
            background: rgba(0,0,0,0.6);
-           color: #EEE;
+           color: #eee;
            margin: 6px -0.5em;
        }
        .suite-code > div {
