moves test-results component to test_widget.html
The test-results web component was appended when a test-widget component
was created. Only one instance of test-results should be present.

--- a/src/app/test_widget/test_widget.html
+++ b/src/app/test_widget/test_widget.html
@@ -8,7 +8,15 @@
   <body>
     <div class="test-widget-display">
       <div class="udacity-header">Udacity Feedback</div>
-      <div class="view-container"></div>
+      <div class="view-container">
+        <div class="test-results">
+          <div class="upper-display">
+            <em class="placeholder">No tests loaded</em>
+            <button class="toggle-display shown" disabled> Test Results</button>
+          </div>
+          <div class="test-suites"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
