--- a/src/app/test_widget/test_widget.html
+++ b/src/app/test_widget/test_widget.html
@@ -6,17 +6,23 @@
     <link rel="stylesheet" href="test_widget.css">
   </head>
   <body>
+    <!-- test-widget component starts here -->
     <div class="test-widget-display">
       <div class="udacity-header">Udacity Feedback</div>
       <div class="view-container">
+        <!-- test-results component starts here -->
         <div class="test-results">
           <div class="upper-display">
             <em class="placeholder">No tests loaded</em>
             <button class="toggle-display shown" disabled> Test Results</button>
           </div>
-          <div class="test-suites"></div>
+          <div class="test-suites">
+            <!-- test-suite component is inserted here (dynamically) -->
+          </div>
         </div>
+        <!-- test-results component ends here -->
       </div>
     </div>
+    <!-- test-widget component ends here -->
   </body>
 </html>
