refactors test_widget for an iFrame
* ../src/app/test_widget/test_widget.html (.test-widget-display): Removes
  that container to be the iFrame (see styles).
* ../src/app/test_widget/test_widget.css (.test-widget-display): Removes
  the default border when using iFrames.

--- a/src/app/test_widget/test_widget.css
+++ b/src/app/test_widget/test_widget.css
@@ -14,6 +14,8 @@ img {
     max-height: 100%;
     overflow-y: scroll;
 
+    border: none;
+
     background-color: rgba(230, 230, 230, 0.9);
     opacity: 0.5;
     transition: opacity 0.3s, max-height 0.3s;
