--- a/src/app/test_widget/test_widget.html
+++ b/src/app/test_widget/test_widget.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  <!-- This is the iFrame base document -->
   <head>
     <title>Udacity Feedback</title>
     <meta charset="UTF-8">
@@ -13,3 +14,5 @@
     <!-- test-widget component ends here -->
   </body>
 </html>
+
+<!-- test-widget.html ends here -->
