--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -1,29 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Udacity Feedback</title>
-	<style>
-		#wl-sites::before {
-			content: "Whitelisted Domains: "
-		}
-	</style>
-	<meta charset="UTF-8">
-</head>
-<body>
-	<div id="wl-sites">none</div>
+  <head>
+    <title>Udacity Feedback</title>
+    <style>
+     #wl-sites::before {
+         content: "Whitelisted Domains: "
+     }
 
-		<br>
+     #whitelist-entry-template {
+         display: none;
+     }
+    </style>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/common.css" />
+  </head>
+  <body>
+    <div id="wl-sites">none</div>
 
-		<label for="add-site"><span>Add Domain: </span><input id="add-site" type="url">
-		</label>
+    <br>
 
-		<br><br>
+    <table class="whitelist">
+      <colgroup><col><col></colgroup>
+      <thead>
+        <tr class="whitelist-title">
+          <th colspan="2">Whitelist</th>
+        </tr>
+        <tr class="whitelist-type">
+          <th colspan="2">Remote hosts</th>
+        </tr>
+      </thead>
+      <tbody id="origin-whitelist">
+        <tr id="whitelist-entry-template" class="whitelist-row">
+          <td class="entry">host</td>
+          <td class="remove"><span class="remove-entry button fa" title="Remove">&#xf00d;</span></td>
+        </tr>
+        <tr class="whitelist-placeholder">
+          <td colspan="2"><span class="whitelist-message">Nothing to show here</span><span class="button fa">&#xf119;</span></td>
+        </tr>
+      </tbody>
+      <thead>
+        <tr class="whitelist-type">
+          <th colspan="2">Local directories</th>
+        </tr>
+      </thead>
+      <tbody id="local-whitelist">
+        <tr class="whitelist-placeholder">
+          <td colspan="2"><span class="whitelist-message">Nothing to show here</span><span class="button fa">&#xf119;</span></td>
+        </tr>
+      </tbody>
+    </table>
+    <label for="add-site"><span>Add Domain: </span><input id="add-site" type="url">
+    </label>
 
-		<label for="remove-site"><span>Remove Domain: </span>
-			<input list="remove-site" name="remove-site" id="site-to-remove">
-			<datalist id="remove-site"></datalist>
-		</label>
+    <br><br>
 
-	<script src="options.js"></script>
-</body>
+    <label for="remove-site"><span>Remove Domain: </span>
+      <input list="remove-site" name="remove-site" id="site-to-remove">
+      <datalist id="remove-site"></datalist>
+    </label>
+    <script src="options.js"></script>
+  </body>
 </html>
