--- a/src/app/css/common.css
+++ b/src/app/css/common.css
@@ -33,6 +33,57 @@ body {
     font: 14px/1.3 sans-serif;
 }
 
+table {
+    border: 2px solid #2c3b48;
+    border-spacing: 0;
+    color: #444;
+    line-height: 37px;
+    margin: 0 auto;
+    width: 600px;
+}
+
+.whitelist-title {
+    background-color: #2c3b48;
+    border: none;
+    color: #fff;
+}
+
+tbody tr:hover {
+    background-color: #cce2e9;
+}
+
+.whitelist-type th {
+    background-color: #7d97ad;
+    /* border-bottom: 3px solid #ccc; */
+    color: #2c3b48;
+    padding-left: 1em;
+    text-align: left;
+}
+
+.whitelist-row td {
+    border-bottom: 1px solid #00b4e4;
+}
+
+.whitelist-placeholder {
+    text-align: center;
+}
+.whitelist-placeholder:hover {
+    background: none;
+}
+
+tbody .whitelist-row:last-child td {
+    border-bottom: none;
+}
+
+
+.entry {
+    padding-left: 0.5em;
+}
+
+.remove {
+    text-align: right;
+}
+
 /* I designed the button with: http://charliepark.org/bootstrap_buttons/ */
 button.custom {
     padding: 0.6em 1em;
