--- a/src/app/css/common.css
+++ b/src/app/css/common.css
@@ -2,130 +2,145 @@
  * This file was taken from uBlock Origin
  */
 @font-face {
-    font-family: 'FontAwesome';
-    font-weight: normal;
-    font-style: normal;
-    src: url('fonts/fontawesome-webfont.ttf') format('truetype');
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  font-style: normal;
+  src: url('fonts/fontawesome-webfont.ttf') format('truetype');
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .fa {
-    display: inline-block;
-    font-family: FontAwesome;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    vertical-align: middle;
+  display: inline-block;
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .button {
-    border: none;
-    box-sizing: border-box;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 150%;
-    margin: 0;
-    padding: 8px;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 150%;
+  margin: 0;
+  padding: 8px;
 }
 
 body {
-    background-color: white;
-    color: black;
-    font: 14px/1.3 sans-serif;
+  background-color: transparent;
+  color: black;
+  font: 14px/1.3 sans-serif;
 }
 
 table {
-    border: 2px solid #2c3b48;
-    border-spacing: 0;
-    color: #444;
-    line-height: 37px;
-    margin: 0 auto;
-    width: 600px;
+  border: 3px solid #2c3b48;
+  border-spacing: 0;
+  color: #444;
+  line-height: 37px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 620px;
 }
 
 .whitelist-title {
-    background-color: #2c3b48;
-    border: none;
-    color: #fff;
+  background-color: #2c3b48;
+  border: none;
+  color: #fff;
 }
 
 tbody tr:hover {
-    background-color: #cce2e9;
+  background-color: #cce2e9;
 }
 
 .whitelist-type th {
-    background-color: #7d97ad;
-    /* border-bottom: 3px solid #ccc; */
-    color: #2c3b48;
-    padding-left: 1em;
-    text-align: left;
+  background-color: #7d97ad;
+  /* border-bottom: 3px solid #ccc; */
+  color: #2c3b48;
+  padding-left: 1em;
+  text-align: left;
 }
 
 .whitelist-row td {
-    border-bottom: 1px solid #00b4e4;
+  border-bottom: 1px solid #00b4e4;
 }
 
 .whitelist-placeholder {
-    text-align: center;
+  text-align: center;
 }
 .whitelist-placeholder:hover {
-    background: none;
+  background: none;
+}
+
+.chromium-message {
+  text-align: left;
+  padding: 1em 1em 0 1em;
+  line-height: 1em;
 }
 
 tbody .whitelist-row:last-child td {
-    border-bottom: none;
+  border-bottom: none;
 }
 
-
 .entry {
-    padding-left: 0.5em;
+  padding-left: 0.5em;
+}
+
+#add-entry input {
+  width: 100%;
+  height: 100%;
 }
 
 .remove {
-    text-align: right;
+  text-align: right;
 }
 
 /* I designed the button with: http://charliepark.org/bootstrap_buttons/ */
 button.custom {
-    padding: 0.6em 1em;
-    border: 1px solid transparent;
-    border-color: #ccc #ccc #bbb #bbb;
-    border-radius: 3px;
-    background-color: hsl(216, 0%, 75%);
-    background-image: linear-gradient(#f2f2f2, #dddddd);
-    background-repeat: repeat-x;
-    color: #000;
-    opacity: 0.8;
+  padding: 0.6em 1em;
+  border: 1px solid transparent;
+  border-color: #ccc #ccc #bbb #bbb;
+  border-radius: 3px;
+  background-color: hsl(216, 0%, 75%);
+  background-image: linear-gradient(#f2f2f2, #dddddd);
+  background-repeat: repeat-x;
+  color: #000;
+  opacity: 0.8;
 }
 button.custom.disabled,
 button.custom[disabled] {
-    border-color: #ddd #ddd hsl(36, 0%, 85%);
-    background-color: hsl(36, 0%, 72%);
-    background-image: linear-gradient(#f2f2f2, #dddddd);
-    color: #666;
-    opacity: 0.6;
-    pointer-events: none;
+  border-color: #ddd #ddd hsl(36, 0%, 85%);
+  background-color: hsl(36, 0%, 72%);
+  background-image: linear-gradient(#f2f2f2, #dddddd);
+  color: #666;
+  opacity: 0.6;
+  pointer-events: none;
 }
 button.custom:hover {
-    opacity: 1.0;
+  opacity: 1.0;
 }
 button.important {
-    padding: 0.6em 1em;
-    border: 1px solid transparent;
-    border-color: #ffcc7f #ffcc7f hsl(36, 100%, 73%);
-    border-radius: 3px;
-    background-color: hsl(36, 100%, 75%);
-    background-image: linear-gradient(#ffdca8, #ffcc7f);
-    background-repeat: repeat-x;
-    color: #222;
-    opacity: 0.8;
+  padding: 0.6em 1em;
+  border: 1px solid transparent;
+  border-color: #ffcc7f #ffcc7f hsl(36, 100%, 73%);
+  border-radius: 3px;
+  background-color: hsl(36, 100%, 75%);
+  background-image: linear-gradient(#ffdca8, #ffcc7f);
+  background-repeat: repeat-x;
+  color: #222;
+  opacity: 0.8;
 }
 
 button.important:hover {
-    opacity: 1.0;
+  opacity: 1.0;
 }
 
 .hiddenFileInput {
-    height: 0;
-    visibility: hidden;
-    width: 0;
+  height: 0;
+  visibility: hidden;
+  width: 0;
 }
