adds configuration button in the action page
* src/app/browser_action/browser_action.html: Adds a link to
  `common.css` and a gear icon.
* src/app/browser_action/browser_action.js (initDisplay): Adds a
  function to attach an EventListener to the gear icon.

--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -19,11 +19,12 @@
          margin-bottom: 1em;
      }
     </style>
+    <link rel="stylesheet" href="../css/common.css" />
     <meta charset="UTF-8">
   </head>
   <body>
     <div id="main">
-      <h3>Udacity Feedback Settings</h3>
+      <h3>Udacity Feedback Settings<span id="configs" class="button fa" title="Configure">&#xf013;</span></h3>
       <div class="loader">
         <div class="loader-description">
           Want to write tests? Here’s the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.
