--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -18,6 +18,17 @@
      .loader-description {
          margin-bottom: 1em;
      }
+     .autorun.disabled {
+         color: #ccc;
+     }
+     .warning-block {
+         width: 80%;
+         color: #e00;
+         font-weight: bold;
+     }
+     .warning-icon {
+         color: #e9d236;
+     }
     </style>
     <link rel="stylesheet" href="../css/common.css" />
     <meta charset="UTF-8">
@@ -35,6 +46,7 @@
         <div class="alert"></div>
       </div>
       <div class="autorun">
+        <div class="warning-block" style="display: none"><span class="button fa warning-icon">&#xf071</span><span id="warning-text"></div>
         <form>
           <label for="allow-feedback">Allow feedback on this domain
             <input id="allow-feedback" type="checkbox" value="yes">
