--- a/src/app/css/common.css
+++ b/src/app/css/common.css
@@ -1,5 +1,5 @@
 /**
- * This file was taken from uBlock Origin
+ * This file was taken in part from uBlock Origin
  */
 @font-face {
   font-family: 'FontAwesome';
