--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -16,7 +16,7 @@
       <colgroup><col><col></colgroup>
       <thead>
         <tr class="whitelist-title">
-          <th colspan="2">Whitelist</th>
+          <th colspan="2"><span id="back-button"></span>Whitelist</th>
         </tr>
         <tr class="whitelist-type">
           <th colspan="2">Remote hosts<span id="remote-add" class="add-remote-entry button fa" title="Add remote host">&#xf196;</span></th>
