--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/fonts.css" />
   </head>
   <body>
     <table class="whitelist">
