--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -31,6 +31,7 @@
      }
     </style>
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/fonts.css" />
     <meta charset="UTF-8">
   </head>
   <body>
