--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -32,6 +32,7 @@
     </style>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/fonts.css" />
+    <link rel="stylesheet" href="../css/ui.css" />
     <meta charset="UTF-8">
   </head>
   <body>
