--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/fonts.css" />
+    <link rel="stylesheet" href="../css/options.css" />
+    <link rel="stylesheet" href="../css/ui.css" />
   </head>
   <body>
     <table class="whitelist">
