--- a/src/app/css/options.css
+++ b/src/app/css/options.css
@@ -77,4 +77,45 @@ tbody .whitelist-row:last-child td {
   top: .5em;
 }
 
+main, footer {
+  border: 3px solid #2c3b48;
+  border-spacing: 0;
+  color: #444;
+  line-height: 37px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  width: 100%;
+  max-width: 620px;
+
+}
+
+.title {
+  background-color: #2c3b48;
+  border: none;
+  color: #fff;
+  font-weight: 700;
+  margin: 0;
+  text-align: center;
+}
+
+.description {
+  background-color: #7d97ad;
+  color: #2c3b48;
+  font-weight: 700;
+  padding-left: 1em;
+  margin: 0;
+  text-align: left;
+}
+
+.description a {
+  color: #2c3b48;
+}
+
+.about {
+  line-height: 2em;
+  padding: 0 1em;
+  text-align: left;
+}
+
 /* options.css<css> ends here */
