correct typos in the options page

--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -50,14 +50,14 @@
       <p class="description">Usage</p>
       <p class="about">Not sure what how to make it work? Try the <a href="http://labs.udacity.com/udacity-feedback-extension/">walkthrough</a>.</p>
       <p class="description">Reporting bugs</p>
-      <p class="about">Because this extension tries supports multiple browsers, it’s not unusual to find bugs when a new browser version rolls out. For any suggestions or bug reports, please make a <a href="https://github.com/udacity/frontend-grading-engine/issues" href="">new issue</a> on the GitHub platform. Make sure to include your browser version and the currently installed version of the extension.</p>
+      <p class="about">Because this extension tries to supports multiple browsers, it’s not unusual to find bugs when a new browser version rolls out. For any suggestions or bug reports, please make a <a href="https://github.com/udacity/frontend-grading-engine/issues" href="">new issue</a> on the GitHub platform. Make sure to include your browser version and the currently installed version of the extension.</p>
       <p class="description">Contact</p>
       <p class="about">You can contact us at <code>udacityfeedback@udacity.com</code>.<p>
     </main>
     <footer>
       <p class="title">About</p>
       <p class="description"><a title="About the extension" href="https://github.com/udacity/frontend-grading-engine">Udacity Front End Feedback<span class="button fa">&#xf08e;</span></a></p>
-      <p class="about">Immediate, visual feedback about any website's HTML, CSS and JavaScript.</span></p>
+      <p class="about">Immediate, visual feedback about any website’s HTML, CSS and JavaScript.</<span></span>></p>
       <p class="about">Version <code id="extension-version"></code> for <span id="browser-name"></span></p>
     </footer>
     <script src="options.js"></script>
