refactors test API link in the browser action page
* src/app/browser_action/browser_action.html: Removes the test API link
  since it may confuse students when they encounter an error.

* src/app/options/index.html: Adds the test API link in the _about_
  section of the _options page_.

--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -15,7 +15,7 @@
      .loader {
          margin-bottom: 1em;
      }
-     .loader-description {
+     .input-container {
          margin-bottom: 1em;
      }
      .autorun.disabled {
@@ -42,9 +42,6 @@
     <div id="main">
       <h3>Udacity Feedback Settings<span id="configs" class="button fa" title="Configure">&#xf013;</span></h3>
       <div class="loader">
-        <div class="loader-description">
-          Want to write tests? Here’s the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.
-        </div>
         <label id="ud-label-loader" for="ud-file-loader"><strong>Load tests from file</strong>
           <input id="ud-file-loader" type="file" accept=".json">
         </label>
