--- a/src/app/options/index.html
+++ b/src/app/options/index.html
@@ -49,6 +49,8 @@
       <p class="title">Help</p>
       <p class="description">Usage</p>
       <p class="about">Not sure what how to make it work? Try the <a href="http://labs.udacity.com/udacity-feedback-extension/">walkthrough</a>.</p>
+      <p class="description">Testing framework</p>
+      <p class="about">Want to write tests? Here’s the <a href="https://github.com/udacity/frontend-grading-engine" target="_blank">API</a>.</p>
       <p class="description">Reporting bugs</p>
       <p class="about">Because this extension tries to supports multiple browsers, it’s not unusual to find bugs when a new browser version rolls out. For any suggestions or bug reports, please make a <a href="https://github.com/udacity/frontend-grading-engine/issues" href="">new issue</a> on the GitHub platform. Make sure to include your browser version and the currently installed version of the extension.</p>
       <p class="description">Contact</p>
