--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -1,38 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <style type="text/css">
-     #main {
-         padding: 1em;
-         height: 100%;
-         width: 800px;
-         font-family: Helvetica, Ubuntu, Arial, sans-serif;
-     }
-     .alert {
-         color: #78f;
-         display: none;
-     }
-     .loader {
-         margin-bottom: 1em;
-     }
-     .input-container {
-         margin-bottom: 1em;
-     }
-     .autorun.disabled {
-         color: #ccc;
-     }
-     #ud-label-loader.disabled {
-         color: #ccc;
-     }
-     .warning-block {
-         width: 80%;
-         color: #e00;
-         font-weight: bold;
-     }
-     .warning-icon {
-         color: #e9d236;
-     }
-    </style>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/fonts.css" />
     <link rel="stylesheet" href="../css/ui.css" />
@@ -41,18 +9,28 @@
   <body>
     <div id="main">
       <h3>Udacity Feedback Settings<span id="configs" class="button fa" title="Configure">&#xf013;</span></h3>
-      <div class="loader">
-        <label id="ud-label-loader" for="ud-file-loader"><strong>Load tests from file</strong>
-          <input id="ud-file-loader" type="file" accept=".json">
-        </label>
-        <div class="alert"></div>
-      </div>
       <div class="autorun">
-        <div class="warning-block" style="display: none"><span class="button fa warning-icon">&#xf071</span><span id="warning-text"></div>
+        <div class="warning-block" style="display: none"><span class="button fa warning-icon">&#xf071</span><span id="warning-text"></span></div>
         <form>
-          <label for="allow-feedback">Allow feedback on this domain
-            <input id="allow-feedback" type="checkbox" value="yes">
-          </label>
+          <div class="allow-container">
+            <label for="allow-feedback">Allow feedback on this domain
+              <input id="allow-feedback" type="checkbox" value="yes" />
+            </label>
+          </div>
+          <div class="loader">
+            <div class="loader-inner">
+              <div class="input-container">
+                <label id="ud-label-loader" for="ud-file-loader"><strong>Load tests from file</strong>
+                  <input id="ud-file-loader" type="file" accept=".json" disabled="disabled" />
+                </label>
+              </div>
+              <div class="input-container">
+                <label for="site-on-whitelist">Allow feedback on this domain
+                  <input id="site-on-whitelist" type="checkbox" value="yes" disabled="disabled" />
+                </label>
+              </div>
+            </div>
+          </div>
         </form>
       </div>
     </div>
