--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -10,28 +10,34 @@
     <div id="main">
       <h3>Udacity Feedback Settings<span id="configs" class="button fa" title="Configure">&#xf013;</span></h3>
       <div class="autorun">
-        <div class="warning-block" style="display: none"><span class="button fa warning-icon">&#xf071</span><span id="warning-text"></span></div>
         <form>
           <div class="allow-container">
-            <label for="allow-feedback">Allow feedback on this domain
+            <label for="allow-feedback">Allow feedback on this domain<span class="button fa info-title" title="Allow injection of the feedback engine">&#xf059;</span>:
               <input id="allow-feedback" type="checkbox" value="yes" />
             </label>
           </div>
           <div class="loader">
-            <div class="loader-inner">
+            <div class="expand-inner">
               <div class="input-container">
                 <label id="ud-label-loader" for="ud-file-loader"><strong>Load tests from file</strong>
                   <input id="ud-file-loader" type="file" accept=".json" disabled="disabled" />
                 </label>
               </div>
               <div class="input-container">
-                <label for="site-on-whitelist">Allow feedback on this domain
+                <label for="site-on-whitelist">Don’t ask on this domain<span class="button fa info-title" title="Permanently allow feedback on this domain">&#xf059;</span>:
                   <input id="site-on-whitelist" type="checkbox" value="yes" disabled="disabled" />
                 </label>
               </div>
             </div>
           </div>
         </form>
+        <div class="info-block expand-block">
+          <div class="expand-inner">
+            <span class="button fa info-icon">&#xf05a;</span>
+            <span class="info-text"></span>
+          </div>
+        </div>
+        <div class="warning-block expand-block"><span class="button fa warning-icon">&#xf071;</span><span id="warning-text"></span></div>
       </div>
     </div>
     <script src="browser_action.js"></script>
