adds useful helpers methods
* src/app/browser_action/browser_action.html: Hides the loader block.

* src/app/browser_action/browser_action.js (HTMLElement.prototype.height): Adds
  a method to the height of an element.
* (HTMLElement.prototype.expand): Adds a method to expand an container according
  to its inner content (using `.expand-inner`) that was collapsed.
* (HTMLElement.prototype.collapse): Adds a method to set the element Height to
  0.
* (HTMLElement.prototype.isCollapsed): Adds a method to check if the element is
  collapsed.
* (HTMLInputElement.prototype.lock): Adds a method to disable a single or
  multiple `HTMLInputELement`.
* (HTMLInputElement.prototype.unlock): Adds a method to enable a single or
  multiple `HTMLInputELement`.

--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -16,7 +16,7 @@
               <input id="allow-feedback" type="checkbox" value="yes" />
             </label>
           </div>
-          <div class="loader">
+          <div class="loader expand-block">
             <div class="expand-inner">
               <div class="input-container">
                 <label id="ud-label-loader" for="ud-file-loader"><strong>Load tests from file</strong>
