feat: Refactors injection methods
* src/app/browser_action/browser_action.html: Fixes the `.alert` box missing for
  `handleFileSelect`.

* src/app/browser_action/browser_action.js (IIFE): Wrap everything inside an
  IIFE.

* (HTMLElement.prototype.isExpanded): Adds the utility function to check if an
  element is expanded.
* (HTMLInputElement.prototype.unlock): Refactors the method to use the new
  `infoBlock.isExpanded` method.

* (sendDataToTab): Moves the function, because it’s used before being defined.

* (siteOnWhitelist.on): Checks that `allowFeedback` is off before activating
  it.
* (siteOnWhitelist.off): Checks that `allowFeedback` is on before deactivating
  it.
* (siteOnWhitelist.add): Adds this method that will add a new website to the
  whitelist.
* (siteOnWhitelist.remove): Adds this method that will remove a website from the
  whitelist.
* (siteOnWhitelist.onchange): Refactors the method to use the new `add` and
  `remove` member methods.

* (allowFeedback.onchange): Adds messages for activating/deactivating the
  grading engine.
* (allowFeedback.isOn): Adds a getter.
* (allowFeedback.isOff): Adds a getter.

* src/app/js/inject/StateManager.js (StateManager.hostIsAllowed ->
  StateManager.isAllowed): Refactors the property name since it was no longer
  used.
* (StateManager.isSiteOnWhitelist): Uses the new `StateManager.allowSite` & the
  `StateManager.disallowSite` setters and the new `(SateManager.getIsAllowed`
  getter.
* (StateManager.allowSite): Adds this new setter to allow the extension to
  execute the grading engine.
* (StateManager.disallowSite): Adds this new setter to disallow the extension to
  execute the grading engine.
* (StateManager.addSiteToWhitelist): Refactors to use the new `allowSite` and
  `disallowSite` member methods.

* src/app/js/inject/inject.js (onMessage listener): Adds a name to the
  function (`handler`). Adds the `allow` message type to temporarily allow the
  grading engine for a website. Renames the `on-off` messa

--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -23,6 +23,7 @@
                   <input id="ud-file-loader" type="file" accept=".json" disabled="disabled" />
                 </label>
               </div>
+              <div class="alert"></div>
               <div class="input-container">
                 <label for="site-on-whitelist">Don’t ask on this domain<span class="button fa info-title" title="Permanently allow feedback on this domain">&#xf059;</span>:
                   <input id="site-on-whitelist" type="checkbox" value="yes" disabled="disabled" />
